now we can play bj

--- a/todo
+++ b/todo
@@ -1,7 +1,8 @@
-tester bj;
+tester bj:
 
-bj summon -> join -> bj start -> bj stop -> Ctrl C = leak wtf je comprend pas
-bj start -> bj stop
-bj stop pendant la game
-join #other_table -> bj summon
-
+[] bj summon -> join -> bj start -> bj stop -> Ctrl C = leak wtf je comprend pas
+[] bj start -> bj stop
+[] bj stop pendant la game
+[] join #other_table -> bj summon
+[] bj STOP => unsommon the bot!
+[] PART x_table => proprely quit table
