--- a/todo
+++ b/todo
@@ -8,6 +8,9 @@
 
 ()	bj summon -> join -> bj start -> bj stop -> Ctrl C = leak wtf je comprend pas
 {}	bj stop pendant la game?
+{}	bj summon -> ne jamais join
+
+[]	KICK dans un channel BJ
 
 []	PART x_table => proprely quit table
 []	PART your_table => BJ STOP => unsommon
@@ -16,7 +19,7 @@
 		->peut etre ecrire dans un fichier / lire le resultat du server!
 
 []	affichage sur pls ligne du BJ
-[y]	affichage des noms et tunes des user dans Game Bj
+{}	affichage des noms et tunes des user dans Game Bj
 
 {}	USER name deLa merde en3parite
 {}	Toutes les commandes
