--- a/todo
+++ b/todo
@@ -6,13 +6,13 @@
 
 --
 
-()	bj summon -> join -> bj start -> bj stop -> Ctrl C = leak wtf je comprend pas
+(y)	bj summon -> join -> bj start -> bj stop -> Ctrl C = leak wtf je comprend pas
 {}	bj stop pendant la game?
 {}	bj summon -> ne jamais join
 
-[]	KICK dans un channel BJ
+{}	KICK dans un channel BJ
+{}	PART x_table => proprely quit table
 
-[]	PART x_table => proprely quit table
 []	PART your_table => BJ STOP => unsommon
 
 []	si le bot est un programme, le static marche pas trop; dealer0++ => dealer0 (=/= programme) => erreur
